--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,12 @@
+// @import font-family
+
+@import "variable";
+@import "mixin";
+
+@import "reset";
+@import "base";
+
 @import './layout/header.scss';
 @import './layout/footer.scss';
-
 
 @import './pages/index.scss';
